create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1892,6 +1892,73 @@ body {
   text-align: center;
   color: #cc2952;
 }
+.cid-rpcjsiWpP5 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjsiWpP5 .content {
+    text-align: center;
+  }
+  .cid-rpcjsiWpP5 .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjsiWpP5 .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjsiWpP5 .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjsiWpP5 .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjsiWpP5 .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjsiWpP5 .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjsiWpP5 .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjsiWpP5 .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjsiWpP5 .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjsiWpP5 .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjsiWpP5 .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjsiWpP5 .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #0f7699;
@@ -2377,6 +2444,73 @@ body {
 .cid-roOiCYWSnH .card-title {
   text-align: center;
   color: #cc2952;
+}
+.cid-rpcjxvN3Pm {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjxvN3Pm .content {
+    text-align: center;
+  }
+  .cid-rpcjxvN3Pm .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjxvN3Pm .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjxvN3Pm .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjxvN3Pm .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjxvN3Pm .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjxvN3Pm .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjxvN3Pm .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjxvN3Pm .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjxvN3Pm .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjxvN3Pm .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjxvN3Pm .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjxvN3Pm .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
@@ -4131,6 +4265,73 @@ body {
     width: 100% !important;
   }
 }
+.cid-rpcjFouMZb {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjFouMZb .content {
+    text-align: center;
+  }
+  .cid-rpcjFouMZb .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjFouMZb .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjFouMZb .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjFouMZb .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjFouMZb .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjFouMZb .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjFouMZb .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjFouMZb .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjFouMZb .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjFouMZb .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjFouMZb .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjFouMZb .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #0f7699;
@@ -4569,6 +4770,73 @@ body {
   color: #cc2952;
   text-align: center;
 }
+.cid-rpcjnEJttx {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjnEJttx .content {
+    text-align: center;
+  }
+  .cid-rpcjnEJttx .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjnEJttx .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjnEJttx .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjnEJttx .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjnEJttx .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjnEJttx .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjnEJttx .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjnEJttx .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjnEJttx .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjnEJttx .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjnEJttx .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjnEJttx .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #0f7699;
@@ -4957,6 +5225,73 @@ body {
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #f7ed4a !important;
+}
+.cid-rpcjNVfJQY {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjNVfJQY .content {
+    text-align: center;
+  }
+  .cid-rpcjNVfJQY .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjNVfJQY .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjNVfJQY .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjNVfJQY .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjNVfJQY .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjNVfJQY .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjNVfJQY .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjNVfJQY .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjNVfJQY .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjNVfJQY .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjNVfJQY .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjNVfJQY .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
 .cid-rp62Lto5XG {
   padding-top: 135px;
@@ -5483,6 +5818,73 @@ body {
 @media (max-width: 768px) {
   .cid-rp6cNncpX1 .video-block {
     width: 100% !important;
+  }
+}
+.cid-rpcjhy0Hix {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjhy0Hix .content {
+    text-align: center;
+  }
+  .cid-rpcjhy0Hix .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjhy0Hix .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjhy0Hix .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjhy0Hix .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjhy0Hix .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjhy0Hix .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjhy0Hix .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjhy0Hix .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjhy0Hix .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjhy0Hix .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjhy0Hix .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjhy0Hix .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
   }
 }
 .cid-rog5cfv25E {
@@ -6093,4 +6495,71 @@ body {
   left: 0;
   width: 100%;
   overflow: hidden;
+}
+.cid-rpcjJrYmQM {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rpcjJrYmQM .content {
+    text-align: center;
+  }
+  .cid-rpcjJrYmQM .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rpcjJrYmQM .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rpcjJrYmQM .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rpcjJrYmQM .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rpcjJrYmQM .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rpcjJrYmQM .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rpcjJrYmQM .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rpcjJrYmQM .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rpcjJrYmQM .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rpcjJrYmQM .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rpcjJrYmQM .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rpcjJrYmQM .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
