create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5324,6 +5324,9 @@ body {
 .cid-rphGfemVuu .mbr-timeline-text B {
   color: #0f7699;
 }
+.cid-rphGfemVuu .mbr-section-title {
+  color: #0f7699;
+}
 .cid-rphGggpBR3 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -5394,13 +5397,13 @@ body {
   text-align: center;
 }
 .cid-rphGggpBR3 .mbr-section-subtitle B {
-  color: #7f1933;
+  color: #cc2952;
 }
 .cid-rphGggpBR3 .mbr-step-text B {
   color: #0f7699;
 }
 .cid-rphGggpBR3 .mbr-section-title B {
-  color: #7f1933;
+  color: #cc2952;
 }
 .cid-rphZAjp4A2 {
   padding-top: 90px;
@@ -5476,7 +5479,7 @@ body {
   color: #0f7699;
 }
 .cid-rphZAjp4A2 .mbr-section-subtitle B {
-  color: #7f1933;
+  color: #cc2952;
 }
 .cid-rphZBDRGbg {
   padding-top: 90px;
@@ -5546,13 +5549,13 @@ body {
 }
 .cid-rphZBDRGbg .mbr-step-text {
   text-align: center;
-  color: #cc2952;
+  color: #0f7699;
 }
 .cid-rphZBDRGbg .mbr-step-text B {
   color: #0f7699;
 }
 .cid-rphZBDRGbg .mbr-section-subtitle B {
-  color: #7f1933;
+  color: #cc2952;
 }
 .cid-rphZCOGOcY {
   padding-top: 90px;
@@ -5560,7 +5563,7 @@ body {
   background-color: #ffffff;
 }
 .cid-rphZCOGOcY .mbr-section-subtitle {
-  color: #0f7699;
+  color: #cc2952;
   text-align: center;
   font-weight: 300;
 }
@@ -5615,13 +5618,14 @@ body {
 }
 .cid-rphZCOGOcY .mbr-step-title {
   text-align: center;
+  color: #cc2952;
 }
 .cid-rphZCOGOcY .mbr-step-text {
   text-align: center;
   color: #cc2952;
 }
 .cid-rphZCOGOcY .mbr-step-text B {
-  color: #073b4c;
+  color: #0f7699;
 }
 .cid-rphZCOGOcY .mbr-section-subtitle B {
   color: #cc2952;
@@ -5635,7 +5639,7 @@ body {
   background-color: #ffffff;
 }
 .cid-rphZDPqelG .mbr-section-subtitle {
-  color: #767676;
+  color: #cc2952;
   text-align: center;
   font-weight: 300;
 }
@@ -5690,13 +5694,14 @@ body {
 }
 .cid-rphZDPqelG .mbr-step-title {
   text-align: center;
+  color: #cc2952;
 }
 .cid-rphZDPqelG .mbr-step-text {
   text-align: center;
-  color: #cc2952;
+  color: #0f7699;
 }
 .cid-rphZDPqelG .mbr-step-text B {
-  color: #073b4c;
+  color: #0f7699;
 }
 .cid-rphZDPqelG .mbr-section-subtitle B {
   color: #cc2952;
