--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7022,67 +7022,18 @@ body {
 .cid-rphZEXmfxP .mbr-section-title {
   color: #0f7699;
 }
-.cid-rphGurwFTf {
+.cid-rpo2b3bCpo {
+  background: #149dcc;
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f9f9f9;
+  background: linear-gradient(0deg, #149dcc, #ffffff);
 }
-.cid-rphGurwFTf .nav-tabs {
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  border-bottom: none;
+.cid-rpo2b3bCpo .video-block {
+  margin: auto;
 }
-.cid-rphGurwFTf .nav-tabs .nav-link {
-  box-sizing: border-box;
-  color: #767676;
-  font-style: normal;
-  font-weight: 500;
-  border-radius: 3px;
-  border: 1px solid #767676;
-  padding: 1rem 3rem;
-  margin: 0.4rem .8rem !important;
-  transition: all .3s;
-}
-.cid-rphGurwFTf .nav-tabs .nav-link:hover {
-  background-color: #149dcc;
-}
-.cid-rphGurwFTf .nav-tabs .nav-link:focus {
-  box-shadow: none;
-  background-color: #149dcc;
-}
-.cid-rphGurwFTf .nav-tabs .nav-link.active {
-  font-weight: 500;
-  color: #ffffff;
-  font-style: normal;
-  border: none;
-  background: #149dcc;
-}
-.cid-rphGurwFTf .nav-tabs .nav-link.active:hover {
-  border: none;
-}
-.cid-rphGurwFTf .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rphGurwFTf p {
-  color: #767676;
-}
-.cid-rphGurwFTf .mbr-figure {
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-  -webkit-align-self: flex-start;
-  align-self: flex-start;
-  padding-right: 4rem;
-}
-.cid-rphGurwFTf .mbr-text {
-  word-break: break-word;
-}
-@media (max-width: 991px) {
-  .cid-rphGurwFTf .mbr-figure {
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 2rem;
+@media (max-width: 768px) {
+  .cid-rpo2b3bCpo .video-block {
+    width: 100% !important;
   }
 }
 .cid-rpcjNVfJQY {
@@ -7150,69 +7101,6 @@ body {
   .cid-rpcjNVfJQY .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
-  }
-}
-.cid-rpi6UBTIqG {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #f9f9f9;
-}
-.cid-rpi6UBTIqG .nav-tabs {
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  border-bottom: none;
-}
-.cid-rpi6UBTIqG .nav-tabs .nav-link {
-  box-sizing: border-box;
-  color: #767676;
-  font-style: normal;
-  font-weight: 500;
-  border-radius: 3px;
-  border: 1px solid #767676;
-  padding: 1rem 3rem;
-  margin: 0.4rem .8rem !important;
-  transition: all .3s;
-}
-.cid-rpi6UBTIqG .nav-tabs .nav-link:hover {
-  background-color: #149dcc;
-}
-.cid-rpi6UBTIqG .nav-tabs .nav-link:focus {
-  box-shadow: none;
-  background-color: #149dcc;
-}
-.cid-rpi6UBTIqG .nav-tabs .nav-link.active {
-  font-weight: 500;
-  color: #ffffff;
-  font-style: normal;
-  border: none;
-  background: #149dcc;
-}
-.cid-rpi6UBTIqG .nav-tabs .nav-link.active:hover {
-  border: none;
-}
-.cid-rpi6UBTIqG .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rpi6UBTIqG p {
-  color: #767676;
-}
-.cid-rpi6UBTIqG .mbr-figure {
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-  -webkit-align-self: flex-start;
-  align-self: flex-start;
-  padding-right: 4rem;
-}
-.cid-rpi6UBTIqG .mbr-text {
-  word-break: break-word;
-}
-@media (max-width: 991px) {
-  .cid-rpi6UBTIqG .mbr-figure {
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 2rem;
   }
 }
 .cid-qTkzRZLJNu .navbar {
@@ -8090,7 +7978,7 @@ body {
   background-color: #ffffff;
 }
 .cid-rphZEXmfxP .mbr-section-subtitle {
-  color: #767676;
+  color: #0f7699;
   text-align: center;
   font-weight: 300;
 }
@@ -8155,6 +8043,9 @@ body {
 }
 .cid-rphZEXmfxP .mbr-section-subtitle B {
   color: #cc2952;
+}
+.cid-rphZEXmfxP .mbr-section-title {
+  color: #0f7699;
 }
 .cid-rphGurwFTf {
   padding-top: 60px;
