--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6524,7 +6524,7 @@ body {
 .cid-rphGfemVuu {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #cccccc;
 }
 .cid-rphGfemVuu .mbr-section-subtitle {
   color: #767676;
@@ -6696,8 +6696,8 @@ body {
   color: #0f7699;
 }
 .cid-rphZAjp4A2 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 135px;
+  padding-bottom: 135px;
   background-image: url("../../../assets/images/12-1024x794.jpg");
 }
 .cid-rphZAjp4A2 .mbr-section-subtitle {
@@ -6772,7 +6772,7 @@ body {
   color: #cc2952;
 }
 .cid-rphZBDRGbg {
-  padding-top: 90px;
+  padding-top: 135px;
   padding-bottom: 90px;
   background-image: url("../../../assets/images/15.-445x305.jpg");
 }
@@ -6786,7 +6786,7 @@ body {
   height: 64px;
   font-size: 32px;
   border-radius: 50%;
-  border: 2px solid #efefef;
+  border: 2px solid #0f7699;
 }
 @media (max-width: 767px) {
   .cid-rphZBDRGbg .step {
@@ -6805,7 +6805,7 @@ body {
   content: "";
   width: 2px;
   height: calc(100% - (32px + 4px) * 2);
-  background-color: #efefef;
+  background-color: #0f7699;
 }
 @media (max-width: 767px) {
   .cid-rphZBDRGbg .separline:after {
