--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2445,6 +2445,21 @@ body {
   text-align: center;
   color: #cc2952;
 }
+.cid-rpLEVrGxmF {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #0f7699, #ff7f9f);
+}
+@media (min-width: 992px) {
+  .cid-rpLEVrGxmF .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rpLEVrGxmF .mbr-figure {
+    padding-top: 3rem;
+  }
+}
 .cid-rpcjxvN3Pm {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -7016,6 +7031,20 @@ body {
     -webkit-justify-content: center;
   }
 }
+.cid-rp6cNncpX1 {
+  background: #efefef;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #efefef, #0f7699);
+}
+.cid-rp6cNncpX1 .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-rp6cNncpX1 .video-block {
+    width: 100% !important;
+  }
+}
 .cid-rp62Lto5XG {
   padding-top: 135px;
   padding-bottom: 0px;
@@ -7529,18 +7558,19 @@ body {
 .cid-rp699yTw7S .dropdown-item:hover {
   color: #f7ed4a !important;
 }
-.cid-rp6cNncpX1 {
-  background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #149dcc, #ffffff);
+.cid-rpLNYqxK6G {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #0f7699, #ff7f9f);
 }
-.cid-rp6cNncpX1 .video-block {
-  margin: auto;
+@media (min-width: 992px) {
+  .cid-rpLNYqxK6G .mbr-figure {
+    padding-left: 4rem;
+  }
 }
-@media (max-width: 768px) {
-  .cid-rp6cNncpX1 .video-block {
-    width: 100% !important;
+@media (max-width: 991px) {
+  .cid-rpLNYqxK6G .mbr-figure {
+    padding-top: 3rem;
   }
 }
 .cid-rpcjhy0Hix {
