--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3507,6 +3507,199 @@ body {
 .cid-rqruER3gsB .mbr-section-subtitle B {
   color: #0f7699;
 }
+.cid-rqrL4Eiddh {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rqrL4Eiddh .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rqrL4Eiddh .mbr-text {
+  color: #767676;
+}
+.cid-rqrL4Eiddh .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rqrL4Eiddh .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rqrL4Eiddh .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rqrL4Eiddh .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rqrL4Eiddh .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rqrL4Eiddh .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: -webkit-flex !important;
+  opacity: 0;
+}
+.cid-rqrL4Eiddh .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rqrL4Eiddh .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-rqrL4Eiddh .mbr-section-title B {
+  color: #073b4c;
+}
+.cid-rqrL4Eiddh .mbr-section-subtitle B {
+  color: #0f7699;
+}
+.cid-rqrNpjHtlB {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rqrNpjHtlB .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rqrNpjHtlB .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rqrNpjHtlB .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-rqrNpjHtlB .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rqrNpjHtlB .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-rqrNpjHtlB .countdown-cont {
+  background: linear-gradient(45deg, #149dcc, #e4d295);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rqrNpjHtlB .dot {
+    display: none;
+  }
+  .cid-rqrNpjHtlB .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rqrNpjHtlB .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 576px) {
+  .cid-rqrNpjHtlB .row {
+    flex-wrap: nowrap;
+  }
+  .cid-rqrNpjHtlB .number {
+    white-space: nowrap;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rqrNpjHtlB .number {
+    font-size: 30px;
+  }
+  .cid-rqrNpjHtlB .period {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rqrNpjHtlB .number {
+    font-size: 20px;
+  }
+  .cid-rqrNpjHtlB .period {
+    font-size: 0.6rem;
+  }
+}
 .cid-rqrCYoDhbl {
   padding-top: 135px;
   padding-bottom: 135px;
